# tdd-dojo

./: .gitignore  CMakeLists.txt  README.md
Soundex/01/: CMakeLists.txt
Soundex/01/src/: Soundex.cpp  Soundex.hpp
Soundex/01/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/02/: CMakeLists.txt
Soundex/02/src/: Soundex.cpp  Soundex.hpp
Soundex/02/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/03/src/: Soundex.cpp  Soundex.hpp
Soundex/03/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/04/src/: Soundex.cpp  Soundex.hpp
Soundex/04/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/05/src/: Soundex.cpp  Soundex.hpp
Soundex/05/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/06/src/: Soundex.cpp  Soundex.hpp
Soundex/06/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/07/src/: Soundex.cpp  Soundex.hpp
Soundex/07/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/08/src/: Soundex.cpp  Soundex.hpp
Soundex/08/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/09/src/: Soundex.cpp  Soundex.hpp
Soundex/09/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/10/src/: Soundex.cpp
Soundex/10/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/11/src/: Soundex.cpp  Soundex.hpp
Soundex/11/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/12/src/: Soundex.cpp  Soundex.hpp
Soundex/12/test/unit/: CMakeLists.txt  SoundexTest.cpp
Soundex/test/unit/: SoundexTest.cpp
src/: Soundex.cpp  Soundex.hpp
test/unit/: CMakeLists.txt
