cmake_minimum_required(VERSION 3.18.4 FATAL_ERROR)

project(TDD-Dojo)

add_subdirectory(./Soundex/01)
add_subdirectory(./Soundex/02)
add_subdirectory(./Soundex/03)
add_subdirectory(./Soundex/04)
add_subdirectory(./Soundex/05)
add_subdirectory(./Soundex/06)
add_subdirectory(./Soundex/07)
add_subdirectory(./Soundex/08)
add_subdirectory(./Soundex/09)
add_subdirectory(./Soundex/10)
add_subdirectory(./Soundex/11)
add_subdirectory(./Soundex/12)
